pages/docs/reference/typescript/v4/functions/step-wait-for-event.mdx
import { Info, Callout, Properties, Property, Row, Col, CodeGroup, VersionBadge } from "src/shared/Docs/mdx";


export const metaTitle = "step.waitForEvent() | TypeScript SDK v4 Reference"
export const description = "Pause a function and resume when a matching event arrives using step.waitForEvent() in SDK v4. Configure timeout, correlation expression, and event data types."

# Wait for event


Use `step.waitForEvent()` to pause your function's execution until a matching event is received or a timeout is reached. This is useful for building [human-in-the-loop workflows](/docs/ai-patterns/human-in-the-loop), waiting for approvals, or coordinating between separate functions.

## `step.waitForEvent(id, options): Promise<null | EventPayload>`

<Row>
  <Col>
    <Properties>
      <Property name="id" type="string" required>
        The ID of the step. This will be what appears in your function's logs and is used to memoize step state across function versions.
      </Property>
      <Property name="options" type="object" required>
        Options for configuring how to wait for the event.
        <Properties nested={true}>
          <Property name="event" type="string | EventType" required>
            The name of a given event to wait for, or an [`eventType()`](/docs/reference/typescript/v4/functions/triggers#eventtype) result for typed return values.
          </Property>
          <Property name="timeout" type="string | number | Date | Temporal.Duration | Temporal.Instant | Temporal.ZonedDateTime" required>
            How long to wait to receive the event. Either:
            - A duration string compatible with the [ms](https://npm.im/ms) package, e.g. `"30m"`, `"3 hours"`, or `"2.5d"`,
            - A `number` of milliseconds,
            - An absolute `Date`,
            - A [`Temporal.Duration`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Temporal/Duration) for a relative wait, or
            - A [`Temporal.Instant`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Temporal/Instant) or [`Temporal.ZonedDateTime`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Temporal/ZonedDateTime) for an absolute deadline.
          </Property>
          <Property name="match" type="string">
            The property to match the event trigger and the wait event, using dot-notation, e.g. `data.userId`. Cannot be combined with `if`.
          </Property>
          <Property name="if" type="string">
            An expression on which to conditionally match the original event trigger (`event`) and the wait event (`async`). Cannot be combined with `match`.

            Expressions are defined using the Common Expression Language (CEL) with the events accessible using dot-notation. Read [our guide to writing expressions](/docs/guides/writing-expressions) for more info. Examples:

            * `event.data.userId == async.data.userId && async.data.billing_plan == 'pro'`
          </Property>
        </Properties>
      </Property>
    </Properties>
  </Col>
  <Col>
  ```ts
  // Wait 7 days for an approval and match invoice IDs
  const approval = await step.waitForEvent("wait-for-approval", {
    event: "app/invoice.approved",
    timeout: "7d",
    match: "data.invoiceId",
  });

  // Wait 30 days for a user to start a subscription
  // on the pro plan
  const subscription = await step.waitForEvent("wait-for-subscription", {
    event: "app/subscription.created",
    timeout: "30d",
    if: "event.data.userId == async.data.userId && async.data.billing_plan == 'pro'",
  });

  // Wait until a specific deadline
  const response = await step.waitForEvent("wait-for-response", {
    event: "app/response.received",
    timeout: new Date("2026-05-01T00:00:00Z"),
    match: "data.requestId",
  });

  // Use eventType() for typed return values
  const approvalType = eventType("app/approval.received", {
    schema: z.object({ approved: z.boolean() }),
  });

  const approval = await step.waitForEvent("wait-for-approval", {
    event: approvalType,
    timeout: "7d",
  });
  // approval?.data is typed as { approved: boolean }
  ```
  </Col>
</Row>

<Callout>
  `step.waitForEvent()` must be called using `await` or some other Promise handler to ensure your function sleeps correctly.
</Callout>

<Callout variant="warning">
**No `in` operator support. Use multiple equality checks with `||` instead.** CEL's `in` operator is not supported with `if` expressions, instead, use multiple equality checks (`==`) with an or operator (`||`) to achieve the same result.

```plaintext
// Do not use this:
// async.data.function_id in ["app-test-a", "app-test-b"]

// Use this:
(async.data.function_id == "app-test-a" || async.data.function_id == "app-test-b")
```

See [GitHub issue #3907](https://github.com/inngest/inngest/issues/3907) for tracking.
</Callout>

<Callout>
  Inside a `group.parallel()` race, a losing `step.waitForEvent()` is not cancelled: it remains an active pause and keeps the run in a `Running` state until its `timeout` is reached. See the [step parallelism guide](/docs/guides/step-parallelism) for details.
</Callout>
